All Post Processing Stages

--- a/postprocess/CMakeLists.txt
+++ b/postprocess/CMakeLists.txt
@@ -1,6 +1,11 @@
 cmake_minimum_required(VERSION 3.6)
 
-add_library(postprocess post_process_stage.cpp negate_stage.cpp sobel_cv_stage.cpp)
+pkg_check_modules(OPENCV REQUIRED opencv)
 
-install(TARGETS encoders LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
+include_directories(${OPENCV_INCLUDE_DIRS})
+
+add_library(postprocess post_process_stage.cpp negate_stage.cpp sobel_cv_stage.cpp)
+target_link_libraries(postprocess ${OPENCV_LIBRARIES})
+
+install(TARGETS postprocess LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
 
