optionally build opencv

--- a/postprocess/CMakeLists.txt
+++ b/postprocess/CMakeLists.txt
@@ -1,24 +1,24 @@
 cmake_minimum_required(VERSION 3.6)
 
-pkg_check_modules(OPENCV REQUIRED opencv)
+set(SRC post_process_stage.cpp negate_stage.cpp)
+set(TARGET_LIBS "")
 
-include_directories(${OPENCV_INCLUDE_DIRS})
+find_package(OpenCV QUIET)
 
-message(STATUS "${OPENCV_LIBRARIES}")
+if (OPENCV_FOUND)
+    message(STATUS "OpenCV library found:")
+    message(STATUS "    version: ${OPENCV_VERSION}")
+    message(STATUS "    libraries: ${OPENCV_LIBS}")
+    message(STATUS "    include path: ${OPENCV_INCLUDE_DIRS}")
+    include_directories(${OPENCV_INCLUDE_DIRS})
+    set(SRC ${SRC} sobel_cv_stage.cpp face_detect_cv_stage.cpp)
+    set(TARGET_LIBS ${OPENCV_LIBS})
+    add_definitions(-DOPENCV_PRESENT)
+else()
+    message(WARNING "OpenCV not found, some stages will not be built!")
+endif()
 
-find_package(OpenCV 3.4.7 REQUIRED)
-
-# If the package has been found, several variables will
-# be set, you can find the full list with descriptions
-# in the OpenCVConfig.cmake file.
-# Print some message showing some of them
-message(STATUS "OpenCV library status:")
-message(STATUS "    version: ${OpenCV_VERSION}")
-message(STATUS "    libraries: ${OpenCV_LIBS}")
-message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
-
-add_library(postprocess post_process_stage.cpp negate_stage.cpp sobel_cv_stage.cpp face_detect_cv_stage.cpp)
-target_link_libraries(postprocess ${OpenCV_LIBS})
+add_library(postprocess ${SRC})
+target_link_libraries(postprocess ${TARGET_LIBS})
 
 install(TARGETS postprocess LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
-
